--- a/Poject on Dom/Guess Number/index.html
+++ b/Poject on Dom/Guess Number/index.html
@@ -123,7 +123,7 @@
       <div class="resultparams">
         <p>Previous Guesses: <span class="guesses"></span></p>
         <p>Guesses Remaining: <span class="lastResult">10</span></p>
-        <p class="loworHi"></p>
+        <p class="lowOrHi"></p>
       </div>
     </div>
 
